# miser

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent-skills/: sweetspot-enqueue.md  sweetspot-finalize.md  sweetspot-ops.md  sweetspot-reference.md  sweetspot-run.md  sweetspot-scout.md  sweetspot-workers.md
docker/: Dockerfile.worker
docs/: cost_model.md  lifecycle_inventory.md  lifecycle_reports.md  lifecycle_state_machine.md  production_hardening_roadmap.md  reliability_contract.md  setup.md
examples/: job.arm-eligible.example.json  job.low-urgency.example.json  job.x86.example.json  plan.example.json
infra/opentofu/: .terraform.lock.hcl  README.md  batch.tf  cost.tf  data.tf  network.tf  observability.tf  outputs.tf  sqs.tf  variables.tf
scripts/: verify_release.sh
spotbatch/: cli.py  spot_scout.py  worker.py
sweetspot/: adaptive.py  batch_service.py  bootstrap_apply.py  bootstrap_doctor.py  cli.py  lifecycle.py  planner.py  s3util.py  scout.py  setup.py  worker.py
tests/: test_adaptive.py  test_bootstrap_apply.py  test_bootstrap_doctor.py  test_cli.py  test_cost_model.py  test_lifecycle.py  test_planner.py  test_setup.py  test_worker.py
