[project]
name = "aws-batch-job-runner"
version = "0.1.0"
description = "SpotBatch: durable AWS Batch + SQS + S3 runner for cheap Spot compute jobs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "SpotBatch contributors"}]
dependencies = ["boto3>=1.28", "botocore>=1.31"]

[project.scripts]
spotbatch = "spotbatch.cli:main"
spotbatch-spot-scout = "spotbatch.spot_scout:main"
spotbatch-lane-manager = "spotbatch.spot_lane_manager:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spotbatch*"]
